name: brockman
version: 1.5.7
license: MIT
author: lassulus <lassulus@lassul.us>, kmein <kmein@posteo.de>
maintainer: kmein <kmein@posteo.de>
build-type: Simple
cabal-version: >=1.10

executable brockman
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Brockman.Bot, Brockman.Bot.Controller, Brockman.Bot.Reporter, Brockman.Feed, Brockman.Types, Brockman.Util
  build-depends:
    aeson,
    aeson-pretty,
    base,
    bloomfilter,
    bytestring,
    conduit,
    containers,
    directory,
    feed,
    filepath,
    hslogger,
    http-client,
    irc-conduit,
    lens,
    network,
    optparse-applicative,
    random,
    safe,
    text,
    wreq
  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded
