name: brockman
version: 3.4.5
license: MIT
author: lassulus <lassulus@lassul.us>, kmein <kmein@posteo.de>
maintainer: kmein <kmein@posteo.de>
build-type: Simple
cabal-version: >=1.10

executable brockman
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Brockman.Bot, Brockman.Bot.Controller, Brockman.Bot.Reporter, Brockman.Feed, Brockman.Types, Brockman.Util
  build-depends:
    aeson,
    aeson-pretty,
    base,
    bytestring,
    case-insensitive,
    conduit,
    containers,
    directory,
    feed,
    filepath,
    hashable,
    hslogger,
    html-entity,
    http-client,
    irc-conduit,
    lens,
    lrucaching,
    network,
    optparse-applicative,
    random,
    safe,
    text,
    time,
    timerep,
    unordered-containers,
    wreq
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror -threaded -XStrict
