name: news
version: 1.0.0
license: MIT
author: lassulus <lassulus@lassul.us>
maintainer: lassulus@lassul.us
build-type: Simple
cabal-version: >=1.10

executable news
  main-is: news.hs
  build-depends:
    bloomfilter,
    bytestring,
    feed,
    microlens,
    wreq,
    base,
    text,
    irc-client,
    mtl,
    aeson,
    stm,
    irc-conduit
  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded
